Update redirect page in 404.html

--- a/front/web/404.html
+++ b/front/web/404.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Not Found</title>
   <script>
-    window.location.replace('/analyticsProfession/index.html');
+    window.location.replace('/analyticsProfession');
   </script>
 </head>
 <body>
   <h1>Page Not Found</h1>
-  <p>If you are not redirected automatically, <a href="/analyticsProfession/index.html">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="/analyticsProfession">click here</a>.</p>
 </body>
 </html>
